// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies Test Add Movie 1`] = `
[
  {
    "rating": null,
    "title": "Jumanji",
  },
  {
    "rating": null,
    "title": "Fast & Furious 5",
  },
]
`;

exports[`Movies Test Add Rating 1`] = `
[
  {
    "rating": 5,
    "title": "Jumanji",
  },
  {
    "rating": null,
    "title": "Fast & Furious 5",
  },
]
`;
